cpp/headers/zCore/zExtUtilsCore.h

	struct zExtIntArray
	{
		zIntArray* pointer; /**< A pointer to the array object */
		int arrayCount; /**< The number of items in the array */
		zExtIntArray();
		zExtIntArray(zIntArray a);
		zExtIntArray(zIntArray* a);
		/**
		 * \brief Updates the attributes of the external object
		 */
		void updateAttributes();
		/**
		 * \brief get items from array
		 */
		void getItems(int* items);
		void setItems(int* items, int count);
	};
	struct zExtIntArray2D
	{
		zInt2DArray* pointer; /**< A pointer to the array object */
		int arrayCount; /**< The number of items in the array */
		zExtIntArray2D();
		zExtIntArray2D(zInt2DArray a);
		zExtIntArray2D(zInt2DArray* a);

		/**
		 * \brief Updates the attributes of the external object
		 */
		void updateAttributes();
		/**
		 * \brief get items from array
		 */
		void getItems(zExtIntArray* items);
		void setItems(zExtIntArray* items, int count);
	};
	struct zExtFloatArray
	{
		zFloatArray* pointer; /**< A pointer to the array object */
		int arrayCount; /**< The number of items in the array */
		zExtFloatArray();
		zExtFloatArray(zFloatArray a);
		zExtFloatArray(zFloatArray* a);
		/**
		 * \brief Updates the attributes of the external object
		 */
		void updateAttributes();
		/**
		 * \brief get items from array
		 */
		void getItems(float* items);
		void setItems(float* items, int count);
	};
	struct zExtFloatArray2D
	{
		vector<zFloatArray>* pointer; /**< A pointer to the array object */
		int arrayCount; /**< The number of items in the array */
		zExtFloatArray2D();
		zExtFloatArray2D(vector<zFloatArray> a);
		zExtFloatArray2D(vector<zFloatArray>* a);

		/**
		 * \brief Updates the attributes of the external object
		 */
		void updateAttributes();
		/**
		 * \brief get items from array
		 */
		void getItems(zExtFloatArray* items);
		void setItems(zExtFloatArray* items, int count);
	};
	struct zExtDoubleArray
	{
		zDoubleArray* pointer; /**< A pointer to the array object */
		int arrayCount; /**< The number of items in the array */
		zExtDoubleArray();
		zExtDoubleArray(zDoubleArray a);
		zExtDoubleArray(zDoubleArray* a);
		/**
		 * \brief Updates the attributes of the external object
		 */
		void updateAttributes();
		/**
		 * \brief get items from array
		 */
		void getItems(double* items);
		void setItems(double* items, int count);
	};
	struct zExtDoubleArray2D
	{
		vector<zDoubleArray>* pointer; /**< A pointer to the array object */
		int arrayCount; /**< The number of items in the array */
		zExtDoubleArray2D();
		zExtDoubleArray2D(vector<zDoubleArray> a);
		zExtDoubleArray2D(vector<zDoubleArray>* a);

		/**
		 * \brief Updates the attributes of the external object
		 */
		void updateAttributes();
		/**
		 * \brief get items from array
		 */
		void getItems(zExtDoubleArray* items);
		void setItems(zExtDoubleArray* items, int count);
	};
	struct zExtString
	{
		string* pointer; /**< A pointer to the array object */
		int stringLength; /**< The number of items in the array */
		//zExtString(string s);
		/**
		 * \brief Updates the attributes of the external object
		 */
		void updateAttributes();

		///**
		// * \brief Gets items from the array
		// */
		void getCharecters(char* outString);
		void setItems(char* items, int count);
	};
	struct zExtStringArray
	{
		zStringArray* pointer; /**< A pointer to the array object */
		int arrayCount; /**< The number of items in the array */

		zExtStringArray();
		zExtStringArray(zStringArray a);
		zExtStringArray(zStringArray* a);

		/**
		 * \brief Updates the attributes of the external object
		 */
		void updateAttributes();

		/**
		 * \brief Gets items from the array
		 */
		void getItems(string* items);
		void setItems(string* items, int count);
	};
	struct zExtStringArray2D
	{
		vector<zStringArray>* pointer; /**< A pointer to the array object */
		int arrayCount; /**< The number of items in the array */

		zExtStringArray2D();
		zExtStringArray2D(vector<zStringArray> a);
		zExtStringArray2D(vector<zStringArray>* a);

		/**
		 * \brief Updates the attributes of the external object
		 */
		void updateAttributes();

		/**
		 * \brief Gets items from the array
		 */
		void getItems(zExtStringArray* items);
		void setItems(zExtStringArray* items, int count);
	};
	
	
	struct zExtBoolArray
	{
		zBoolArray* pointer; /**< A pointer to the array object */
		int arrayCount; /**< The number of items in the array */

		zExtBoolArray();
		zExtBoolArray(zBoolArray a);
		zExtBoolArray(zBoolArray* a);

		/**
		 * \brief Updates the attributes of the external object
		 */
		void updateAttributes();

		/**
		 * \brief Gets items from the array
		 */
		void getItems(bool* items);
		void setItems(bool* items, int count);
	};
	struct zExtBoolArray2D
	{
		vector<zBoolArray>* pointer; /**< A pointer to the array object */
		int arrayCount; /**< The number of items in the array */

		zExtBoolArray2D();
		zExtBoolArray2D(vector<zBoolArray> a);
		zExtBoolArray2D(vector<zBoolArray>* a);

		/**
		 * \brief Updates the attributes of the external object
		 */
		void updateAttributes();

		/**
		 * \brief Gets items from the array
		 */
		void getItems(zExtBoolArray* items);
		void setItems(zExtBoolArray* items, int count);
	};